--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+bcrypt==4.1.2
+blinker==1.7.0
+click==8.1.7
 Flask==3.0.0
 Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.2
+itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mysql-connector==2.2.9
+mysql-connector-python==8.0.5
 numpy==1.26.0
 pandas==2.1.1
+PyJWT==2.8.0
 pyodbc==5.0.1
 python-dateutil==2.8.2
-mysql-connector-python==8.0.5
-flask_jwt_extended
-bcrypt
+python-dotenv==1.0.0
+pytz==2023.3.post1
 PyYAML==6.0.1
+six==1.16.0
+tzdata==2023.4
+Werkzeug==3.0.1
