--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 [mysql]
-host = '192.168.88.71'
+host = '<your-host-name>'
 database = 'db_ad'
 user = 'root'
-password = 'a@no1Knows'
-port = 3307
+password = '******'
+port = 3306
