--- a/queries.yml
+++ b/queries.yml
@@ -1,5 +1,5 @@
 
-#Example queries, replace the given queries with appropriate queries.\
+#Example queries, replace the given queries with appropriate queries.
 
 query:
   - name: country
